--- a/style.css
+++ b/style.css
@@ -48,10 +48,10 @@ button{
 }
 
 .jumbo-box{
-    width: 70%;
+    width: 80%;
     height: 45rem;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
     padding: 1rem;
     background-color: blueviolet;
 }
@@ -83,4 +83,57 @@ h1{
     font-size: 4rem;
     color: black;
     margin-top: 6rem;
+}
+
+/************ main ***********/
+.section1{
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+h2{
+    font-size: 3rem;
+    margin-top: 7rem;
+    margin-bottom: 3rem;
+}
+
+label{
+    margin-right: 3rem;
+}
+
+.content-box{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    min-height: 10rem;
+    margin-top: 3rem;
+    border: 1px solid black;
+}
+
+.content-box > div{
+    width: calc(90% / 3);
+    height: 100rem;
+    border: 1px solid black;
+}
+
+/* partner section */
+.partner-box{
+    display: flex;
+    align-items: center;
+    margin-top: 15rem;
+    width: 100%;
+    min-height: 10rem;
+}
+
+.partner-right{
+    margin-left: 1rem;
+}
+
+.partner-right > button{
+    margin: 1.5rem 0;
+}
+
+h3{
+    margin-bottom: 1rem;
 }
