--- a/style.css
+++ b/style.css
@@ -217,3 +217,35 @@ h3{
     font-weight: bold;
     line-height: 5rem;
 }
+
+/********* Footer *********/
+.footer-box{
+    width: 100%;
+    min-height: 30rem;
+    margin-top: 10rem;
+    background-color: black;
+}
+
+.footer-flex{
+    display: flex;
+    gap: 2rem;
+}
+
+.col{
+    width: calc(100% / 5);
+    height: 20rem;
+    margin-top: 5rem;
+    border: 1px solid white;
+    color: white;
+}
+
+h4{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.col > a{
+    display: block;
+    color: white;
+    margin-bottom: 1rem;
+}
