--- a/style.css
+++ b/style.css
@@ -121,10 +121,45 @@ label{
     border: 1px solid black;
 }
 
+.atomicwasbetter-box{
+    width: 100%;
+    min-height: 10rem;
+    margin-top: 3rem;
+    border: 1px solid black;
+}
+
 .content-box > div{
     width: calc(90% / 3);
-    height: 100rem;
+    height: 80rem;
     border: 1px solid black;
+}
+
+.top-box{
+    border: 1px solid black;
+    border-bottom: none;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+.main-box{
+    border: 1px solid black;
+    padding: 1rem;
+}
+
+.main-box > button{
+    margin-left: 0;
+}
+
+.main2-box{
+    position: relative;
+    border: 1px solid black;
+    padding: 1rem;
+}
+
+.main2-box > button{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
 }
 
 /* partner section */
